@@ -90,5 +90,20 @@ module Psych
         @emitter.start_sequence(nil, nil, true, :foo)
       end
     end
+
+    def test_resizing_tags
+      tags = []
+      version = [1,1]
+      obj = Object.new
+      obj.instance_variable_set(:@tags, tags)
+      def obj.to_str
+        (1..10).map{|x| @tags.push(["AAAA","BBBB"])}
+        return "x"
+      end
+
+      tags.push([obj, "tag:TALOS"])
+      @emitter.start_document(version, tags, 0)
+      assert(true)
+    end
   end
 end
