@@ -1,4 +1,7 @@
-Sun Dec 13 18:27:53 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Sun Dec 13 18:28:52 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/psych/psych_emitter.c (start_document): should not exceed
+	  tags array range.
 
 	* ext/psych/psych_emitter.c (start_document): ensure string before
 	  encoding conversion.
